--- a/app/containers/Navbar/styles.css
+++ b/app/containers/Navbar/styles.css
@@ -106,7 +106,7 @@
 
 @media (max-width: 800px) {
   .open.navbar {
-    background: var(--primary-dark);
+    background: var(--primary);
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
     position: fixed;
